Added Samples code to Execute and Analyze Survey

--- a/src/TRAISI/ClientApp/src/admin-app/assets/locale/en.json
+++ b/src/TRAISI/ClientApp/src/admin-app/assets/locale/en.json
@@ -103,6 +103,15 @@
 			"Edit": "Edit",
 			"Delete": "Delete",
 			"View": "View"
+    },
+    "analyze":{
+      "SampleAnalysis": "Survey Sample Distribution Data"
+    },
+    "execute":{
+      "Apply": "Apply",
+      "NewSample": "New Sample",
+      "ImportSample": "Import Sample",
+      "Edit": "Edit"
     }
   },
   "samples": {
