SurveyAnalytics and copy right year code changes

--- a/src/Traisi.ClientApp/src/admin-app/assets/locale/en.json
+++ b/src/Traisi.ClientApp/src/admin-app/assets/locale/en.json
@@ -106,7 +106,7 @@
 			"View": "View"
     },
     "analyze":{
-      "SampleAnalysis": "Survey Sample Distribution Data"
+      "SampleAnalysis": "Survey Sample Distribution Dashboard"
     },
     "surveyresponse":{
       "ExportResponses": "Export Responses"
